2017-03-11 belangeo <belangeo@gmail.com>

    * Added a setKeepLast method to TableRead object (will hold last value).

2017-03-10 belangeo <belangeo@gmail.com>

    * Added a setMode method to Selector object to switch between
      equal power mode and linear fade.

2017-03-06 belangeo <belangeo@gmail.com>

    * Fixed SfMarkerLooper and SfMarkerShuffler markers not accurate
      when soundfile sampling rate is not the same as the server's
      sampling rate.

2017-03-04 belangeo <belangeo@gmail.com>

    * Added a "title" argument to Server.gui() method.

2017-03-03 belangeo <belangeo@gmail.com>

    * MidiDispatcher can send sysex message with sendx() method.

2017-03-03 belangeo <belangeo@gmail.com>

    * Midi input refactoring. Events are now spreaded over the buffer size
	  according to the event's timestamp.

2017-02-19 belangeo <belangeo@gmail.com>

    * Added examples about multicore audio programming with pyo.

2017-02-13 belangeo <belangeo@gmail.com>

    * Final revision for version 0.8.3.

2017-02-13 belangeo <belangeo@gmail.com>

    * Added new object: MidiDispatcher, self-contained midi dispatcher thread.
      Updated MidiListener.

2017-02-12 belangeo <belangeo@gmail.com>

    * Upgraded version number to 0.8.3.

2017-02-12 belangeo <belangeo@gmail.com>

    * Prevents the creation of a SharedTable object on Windows (not implemented yet).

2017-02-12 belangeo <belangeo@gmail.com>

    * Fader and Adsr now start a new envelope from the current amplitude value
      if the previous ramp has not finished yet.

2017-02-12 belangeo <belangeo@gmail.com>

    * Added new object: TableScan, Reads the content of a table in loop,
      without interpolation.

2017-02-11 belangeo <belangeo@gmail.com>

    * Added setGlobalDur, setGlobalDel, getGlobalDur and getGlobalDel methods
      to the Server object. These methods allow the user to manage starttime
      and duration of audio objects globally.

2017-02-09 belangeo <belangeo@gmail.com>
