@@ -570,6 +570,8 @@ Server_new(PyTypeObject *type, PyObject *args, PyObject *kwds)
     self->jackautoout = 1;
     self->jackAutoConnectInputPorts = PyList_New(0);
     self->jackAutoConnectOutputPorts = PyList_New(0);
+    self->isJackTransportSlave = 0;
+    self->jack_transport_state = 0;
     self->samplingRate = 44100.0;
     self->nchnls = 2;
     self->ichnls = 2;
@@ -907,6 +909,20 @@ Server_setJackAutoConnectOutputPorts(Server *self, PyObject *arg)
 }
 
 static PyObject *
+Server_setIsJackTransportSlave(Server *self, PyObject *arg)
+{
+    if (self->server_booted) {
+        Server_warning(self,"Can't change isJackTransportSlave mode for booted server.\n");
+        Py_RETURN_NONE;
+    }
+    if (arg != NULL) {
+        if (PyInt_Check(arg))
+            self->isJackTransportSlave = PyInt_AsLong(arg);
+    }
+    Py_RETURN_NONE;
+}
+
+static PyObject *
 Server_setGlobalSeed(Server *self, PyObject *arg)
 {
     self->globalSeed = 0;
@@ -1110,7 +1126,7 @@ Server_shutdown(Server *self)
     Py_RETURN_NONE;
 }
 
-static PyObject *
+PyObject *
 Server_boot(Server *self, PyObject *arg)
 {
     int i, audioerr = 0, midierr = 0;
@@ -1221,7 +1237,7 @@ Server_boot(Server *self, PyObject *arg)
     Py_RETURN_NONE;
 }
 
-static PyObject *
+PyObject *
 Server_start(Server *self)
 {
     int err = -1;
@@ -1278,6 +1294,9 @@ Server_start(Server *self)
         Server_error(self, "Error starting server.\n");
     }
 
+    if (self->withGUI)
+        PyObject_CallMethod((PyObject *)self->GUI, "setStartButtonState", "i", 1);
+
     Py_RETURN_NONE;
 }
 
@@ -1312,9 +1331,8 @@ Server_stop(Server *self)
         self->server_started = 0;
     }
 
-    /* This call is needed to recover from thread fork with python3/jack on debian.*/
-    /* TODO: Need to be tested with other OSes and audio driver. */
-    //PyOS_AfterFork();
+    if (self->withGUI)
+        PyObject_CallMethod((PyObject *)self->GUI, "setStartButtonState", "i", 0);
 
     Py_RETURN_NONE;
 }
@@ -1953,6 +1971,7 @@ static PyMethodDef Server_methods[] = {
     {"setJackAuto", (PyCFunction)Server_setJackAuto, METH_VARARGS, "Tells the server to auto-connect Jack ports (0 = disable, 1 = enable)."},
     {"setJackAutoConnectInputPorts", (PyCFunction)Server_setJackAutoConnectInputPorts, METH_O, "Sets a list of ports to auto-connect inputs when using Jack."},
     {"setJackAutoConnectOutputPorts", (PyCFunction)Server_setJackAutoConnectOutputPorts, METH_O, "Sets a list of ports to auto-connect outputs when using Jack."},
+    {"setIsJackTransportSlave", (PyCFunction)Server_setIsJackTransportSlave, METH_O, "Sets if the server's start/stop is slave of jack transport."},
     {"setGlobalSeed", (PyCFunction)Server_setGlobalSeed, METH_O, "Sets the server's global seed for random objects."},
     {"setAmp", (PyCFunction)Server_setAmp, METH_O, "Sets the overall amplitude."},
     {"setAmpCallable", (PyCFunction)Server_setAmpCallable, METH_O, "Sets the Server's GUI callable object."},
